--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -63,13 +63,15 @@
 		width: 50%;
 	}
 
+	// This className is not just used by ItemView component, but also several
+	// of it's child components
 	.item-box {
 		// So item-box__no-bugs-message centering will work
 		position: relative;
 		margin: 10px;
 		border: 2px solid black;
 		border-radius: 25px;
-		background-color: v.$mode-item-view-item-box-background-color-light;
+		background-color: v.$mode-common-item-view-item-box-background-color-light;
 		padding: 0px 20px 20px 20px;
 		overflow-wrap: anywhere;
 	}
@@ -147,9 +149,9 @@
 		margin-bottom: 10px;
 		outline: none;
 		border: 1px solid
-			v.$mode-item-view-form-input-border-color-light;
+			v.$mode-common-item-view-form-input-border-color-light;
 		border-radius: v.$common-form-input-border-radius;
-		background-color: v.$mode-item-view-form-input-background-color-light;
+		background-color: v.$mode-common-item-view-form-input-background-color-light;
 		padding: 4px 8px 4px 8px;
 		height: 180px;
 		width: 100%;
