--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1575,7 +1575,8 @@ dropdown can overlap all other components
   transform: translate(-50%, -50%);
   font-size: 16px;
 }
-.item-view-component .item-box__group__field__form-label {
+.item-view-component .item-box__group__field__form-label,
+.item-view-component .item-box__group__field__form-completed-date-label {
   display: inline-block;
   width: 70px;
   font-weight: bold;
@@ -1616,12 +1617,14 @@ dropdown can overlap all other components
 .item-view-component .item-box__group__field__form-select:focus {
   border-color: #2ba6c5;
 }
-.item-view-component .item-box__group__field__form-date {
+.item-view-component .item-box__group__field__form-date,
+.item-view-component .item-box__group__field__form-completed-date {
   outline: none;
   border: 1px solid black;
   background-color: white;
 }
-.item-view-component .item-box__group__field__form-date:focus {
+.item-view-component .item-box__group__field__form-date:focus,
+.item-view-component .item-box__group__field__form-completed-date:focus {
   border-color: #2ba6c5;
 }
 .item-view-component .form-buttons-outer-container {
@@ -2895,6 +2898,44 @@ body {
   background-color: #3a3a3a;
   color: #c7d1db;
 }
+.app-component .js-get-common-item-view-component-item-box-element-background-color-dark-mode-false,
+.js-get-app-component .js-get-common-item-view-component-item-box-element-background-color-dark-mode-false {
+  background-color: #e5e5e5;
+}
+.app-component .js-get-common-item-view-component-item-box-element-background-color-dark-mode-true,
+.js-get-app-component .js-get-common-item-view-component-item-box-element-background-color-dark-mode-true {
+  background-color: #232323;
+}
+.app-component .js-get-common-item-view-component-form-input-element-border-background-text-color-dark-mode-false,
+.js-get-app-component .js-get-common-item-view-component-form-input-element-border-background-text-color-dark-mode-false {
+  border-color: black;
+  background-color: white;
+  color: black;
+}
+.app-component .js-get-common-item-view-component-form-input-element-border-background-text-color-dark-mode-true,
+.js-get-app-component .js-get-common-item-view-component-form-input-element-border-background-text-color-dark-mode-true {
+  border-color: black;
+  background-color: #2e2e2e;
+  color: #c7d1db;
+}
+.app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-false,
+.js-get-app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-false {
+  background-color: #f5f5f5;
+}
+.app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-false:hover, .app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-false:active,
+.js-get-app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-false:hover,
+.js-get-app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-false:active {
+  background-color: #ebebeb;
+}
+.app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-true,
+.js-get-app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-true {
+  background-color: #444444;
+}
+.app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-true:hover, .app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-true:active,
+.js-get-app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-true:hover,
+.js-get-app-component .js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-true:active {
+  background-color: #464646;
+}
 .app-component .js-get-home-component-background-and-text-color-dark-mode-false,
 .js-get-app-component .js-get-home-component-background-and-text-color-dark-mode-false {
   background-color: white;
@@ -3307,90 +3348,52 @@ body {
 .js-get-app-component .js-get-item-view-list-sidebar-item-row-component-selected-background-color-dark-mode-true {
   background-color: #444444;
 }
-.app-component .js-get-item-view-content-container-background-color-dark-mode-false,
-.js-get-app-component .js-get-item-view-content-container-background-color-dark-mode-false {
+.app-component .js-get-item-view-component-item-content-container-element-background-color-dark-mode-false,
+.js-get-app-component .js-get-item-view-component-item-content-container-element-background-color-dark-mode-false {
   background-color: white;
 }
-.app-component .js-get-item-view-content-container-background-color-dark-mode-true,
-.js-get-app-component .js-get-item-view-content-container-background-color-dark-mode-true {
+.app-component .js-get-item-view-component-item-content-container-element-background-color-dark-mode-true,
+.js-get-app-component .js-get-item-view-component-item-content-container-element-background-color-dark-mode-true {
   background-color: #2e2e2e;
 }
-.app-component .js-get-item-view-item-box-background-color-dark-mode-false,
-.js-get-app-component .js-get-item-view-item-box-background-color-dark-mode-false {
-  background-color: #e5e5e5;
-}
-.app-component .js-get-item-view-item-box-background-color-dark-mode-true,
-.js-get-app-component .js-get-item-view-item-box-background-color-dark-mode-true {
-  background-color: #232323;
-}
-.app-component .js-get-item-view-form-input-border-background-text-color-mode-false,
-.js-get-app-component .js-get-item-view-form-input-border-background-text-color-mode-false {
-  border-color: black;
-  background-color: white;
-  color: black;
-}
-.app-component .js-get-item-view-form-input-border-background-text-color-dark-mode-true,
-.js-get-app-component .js-get-item-view-form-input-border-background-text-color-dark-mode-true {
-  border-color: black;
-  background-color: #2e2e2e;
-  color: #c7d1db;
-}
-.app-component .js-get-item-view-diabled-label-dark-mode-false,
-.js-get-app-component .js-get-item-view-diabled-label-dark-mode-false {
+.app-component .js-get-item-view-edit-item-info-component-completed-date-label-element-disabled-dark-mode-false,
+.js-get-app-component .js-get-item-view-edit-item-info-component-completed-date-label-element-disabled-dark-mode-false {
   color: #bfbfbf;
   pointer-events: none;
 }
-.app-component .js-get-item-view-diabled-label-dark-mode-true,
-.js-get-app-component .js-get-item-view-diabled-label-dark-mode-true {
+.app-component .js-get-item-view-edit-item-info-component-completed-date-label-element-disabled-dark-mode-true,
+.js-get-app-component .js-get-item-view-edit-item-info-component-completed-date-label-element-disabled-dark-mode-true {
   color: #6d6d6d;
   pointer-events: none;
 }
-.app-component .js-get-item-view-diabled-input-date-dark-mode-false,
-.js-get-app-component .js-get-item-view-diabled-input-date-dark-mode-false {
+.app-component .js-get-item-view-edit-item-info-component-input-completed-date-element-disabled-dark-mode-false,
+.js-get-app-component .js-get-item-view-edit-item-info-component-input-completed-date-element-disabled-dark-mode-false {
   background-color: #e5e5e5;
   color: #6d6d6d;
   pointer-events: none;
 }
-.app-component .js-get-item-view-diabled-input-date-dark-mode-true,
-.js-get-app-component .js-get-item-view-diabled-input-date-dark-mode-true {
+.app-component .js-get-item-view-edit-item-info-component-input-completed-date-element-disabled-dark-mode-true,
+.js-get-app-component .js-get-item-view-edit-item-info-component-input-completed-date-element-disabled-dark-mode-true {
   background-color: #232323;
   color: #6d6d6d;
   pointer-events: none;
 }
-.app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-false,
-.js-get-app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-false {
-  background-color: #f5f5f5;
-}
-.app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-false:hover, .app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-false:active,
-.js-get-app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-false:hover,
-.js-get-app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-false:active {
-  background-color: #ebebeb;
-}
-.app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-true,
-.js-get-app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-true {
-  background-color: #444444;
-}
-.app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-true:hover, .app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-true:active,
-.js-get-app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-true:hover,
-.js-get-app-component .js-get-item-view-form-cancel-button-button-background-color-with-hover-mode-true:active {
-  background-color: #464646;
-}
-.app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-false,
-.js-get-app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-false {
+.app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false,
+.js-get-app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false {
   color: #6d6d6d;
 }
-.app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-false:hover, .app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-false:active,
-.js-get-app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-false:hover,
-.js-get-app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-false:active {
+.app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false:hover, .app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false:active,
+.js-get-app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false:hover,
+.js-get-app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false:active {
   color: black;
 }
-.app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-true,
-.js-get-app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-true {
+.app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true,
+.js-get-app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true {
   color: #7c7c7c;
 }
-.app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-true:hover, .app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-true:active,
-.js-get-app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-true:hover,
-.js-get-app-component .js-get-item-view-comment-box-individual-comment-icon-button-text-color-with-hover-mode-true:active {
+.app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true:hover, .app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true:active,
+.js-get-app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true:hover,
+.js-get-app-component .js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true:active {
   color: #c7d1db;
 }
 .app-component .js-get-common-brighter-border-color-theme-blue-turkish,
