--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -18,9 +18,12 @@
 	}
 
 	.item-content-container--shifted-right {
-		left: v.$item-view-list-sidebar-width +
+		left: v.$item-view-list-sidebar-expanded-width +
 			v.$item-view-list-sidebar-border-width;
-		width: 85vw;
+		// This width gets resized by JS. This value is chosen as a guess for
+		// ...trying to be closer to what the resize will be to create less
+		// ...of a jump
+		width: 90vw;
 	}
 
 	// Must be a seperate div inside .item-content-container so the padding
