--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1081,7 +1081,7 @@ dropdown can overlap all other components
 .item-view-component .item-content-container--shifted-right,
 .js-get-item-view-component .item-content-container--shifted-right {
   left: 277px;
-  width: 85vw;
+  width: 90vw;
 }
 .item-view-component .padding-container,
 .item-view-component .js-get-item-view-component-padding-container-element,
@@ -1713,16 +1713,12 @@ dropdown can overlap all other components
   margin: 0 0 10px 0;
 }
 
-.item-view-list-sidebar-component,
-.js-get-item-view-list-sidebar-component {
-  width: 275px;
-}
 .item-view-list-sidebar-component .expand-minimize-button,
 .js-get-item-view-list-sidebar-component .expand-minimize-button {
   z-index: 1;
   position: fixed;
   top: 118px;
-  left: 277px;
+  left: 2px;
   border: 2px solid black;
   border-left: none;
   background-color: #e5e5e5;
@@ -1735,9 +1731,9 @@ dropdown can overlap all other components
 .js-get-item-view-list-sidebar-component .expand-minimize-button:active {
   background-color: #d6d6d6;
 }
-.item-view-list-sidebar-component .expand-minimize-button--minimized,
-.js-get-item-view-list-sidebar-component .expand-minimize-button--minimized {
-  left: 2px;
+.item-view-list-sidebar-component .expand-minimize-button--expanded,
+.js-get-item-view-list-sidebar-component .expand-minimize-button--expanded {
+  left: 277px;
 }
 .item-view-list-sidebar-component .expand-minimize-button__centering-container,
 .js-get-item-view-list-sidebar-component .expand-minimize-button__centering-container {
@@ -1752,7 +1748,9 @@ dropdown can overlap all other components
   transform: translate(-50%, -50%);
 }
 .item-view-list-sidebar-component .list-sidebar-container,
-.js-get-item-view-list-sidebar-component .list-sidebar-container {
+.item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element,
+.js-get-item-view-list-sidebar-component .list-sidebar-container,
+.js-get-item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element {
   z-index: 1;
   position: fixed;
   top: 103px;
@@ -1761,15 +1759,17 @@ dropdown can overlap all other components
   border-left: none;
   border-bottom: none;
   height: 90vh;
-  width: 275px;
+  width: 0px;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   overflow-y: auto;
   overflow-x: hidden;
 }
-.item-view-list-sidebar-component .list-sidebar-container--minimized,
-.js-get-item-view-list-sidebar-component .list-sidebar-container--minimized {
-  width: 0px;
+.item-view-list-sidebar-component .list-sidebar-container--expanded,
+.item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element--expanded,
+.js-get-item-view-list-sidebar-component .list-sidebar-container--expanded,
+.js-get-item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element--expanded {
+  width: 275px;
 }
 .item-view-list-sidebar-component .list-sidebar-container__table,
 .js-get-item-view-list-sidebar-component .list-sidebar-container__table {
@@ -1850,10 +1850,6 @@ dropdown can overlap all other components
   transform: translate(0%, -50%);
   left: 15px;
   width: 290px;
-}
-.item-vew-top-bar-component .search-container--invisible,
-.js-get-item-vew-top-bar-component .search-container--invisible {
-  visibility: hidden;
 }
 .item-vew-top-bar-component .search-container__search-bar,
 .js-get-item-vew-top-bar-component .search-container__search-bar {
