--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -15,7 +15,7 @@ body {
 	//=================
 	// Light/Dark mode
 	//=================
-	// Light/Dark mode -- Common (i.e. used by multiple components) element -- 
+	// Light/Dark mode -- Common (i.e. used by multiple components) element --
 	// ...strong (i.e. more distinct) text color
 	.js-get-common-element-strong-text-color-dark-mode-false {
 		color: v.$mode-common-strong-text-color-light;
@@ -24,7 +24,7 @@ body {
 		color: v.$mode-common-strong-text-color-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. used by multiple components) element -- 
+	// Light/Dark mode -- Common (i.e. used by multiple components) element --
 	// ...weak (i.e. less distinct) text color
 	.js-get-common-element-weak-text-color-dark-mode-false {
 		color: v.$mode-common-weak-text-color-light;
@@ -51,7 +51,7 @@ body {
 		color: v.$mode-common-char-count-limit-reached-text-color-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. used by multiple components) blurred 
+	// Light/Dark mode -- Common (i.e. used by multiple components) blurred
 	// ...backdrop element -- background color and opacity
 	.js-get-common-blurred-backdrop-element-background-color-and-opacity-dark-mode-false {
 		background-color: v.$mode-common-blurred-backdrop-background-color-light;
@@ -62,7 +62,7 @@ body {
 		opacity: v.$mode-common-blurred-backdrop-opacity-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. used by multiple components) blurred 
+	// Light/Dark mode -- Common (i.e. used by multiple components) blurred
 	// ...backdrop element -- background color and opacity (with click-to-close
 	// ...functionality)
 	.js-get-common-blurred-backdrop-element-click-to-close-background-color-and-opacity-dark-mode-false {
@@ -102,7 +102,7 @@ body {
 		color: v.$mode-common-grayed-out-text-color-dark;
 	}
 
-	// Light/Dark mode -- Common (i.e. used by multiple components) form input 
+	// Light/Dark mode -- Common (i.e. used by multiple components) form input
 	// ...element -- border, background, and text color
 	.js-get-common-element-form-input-border-background-text-color-dark-mode-false {
 		border-color: v.$mode-common-form-input-border-color-light;
@@ -140,8 +140,8 @@ body {
 		color: v.$mode-common-top-bar-button-and-dropdown-text-color-dark;
 	}
 
-	// Light/Dark mode -- common (i.e. used by multiple components) ItemView, 
-	// ...ItemViewDisplayItemInfo, ItemViewEditItemInfo, and ItemViewCommentBox 
+	// Light/Dark mode -- common (i.e. used by multiple components) ItemView,
+	// ...ItemViewDisplayItemInfo, ItemViewEditItemInfo, and ItemViewCommentBox
 	// ...components 'item-box' element -- background color
 	.js-get-common-item-view-component-item-box-element-background-color-dark-mode-false {
 		background-color: v.$mode-common-item-view-item-box-background-color-light;
@@ -151,7 +151,7 @@ body {
 	}
 
 	// Light/Dark mode -- common (i.e. used by multiple components) ItemViewEditItemInfo,
-	// ...ItemViewCommentBox and ItemViewCommentsBoxIndividualComment components form 
+	// ...ItemViewCommentBox and ItemViewCommentsBoxIndividualComment components form
 	// ...input/textarea/select/option elements -- border, background, and text color
 	.js-get-common-item-view-component-form-input-element-border-background-text-color-dark-mode-false {
 		border-color: v.$mode-common-item-view-form-input-border-color-light;
@@ -164,11 +164,11 @@ body {
 		color: v.$mode-common-strong-text-color-dark;
 	}
 
-		// Light/Dark -- common (i.e. used by multiple components) ItemViewEditItemInfo 
+	// Light/Dark -- common (i.e. used by multiple components) ItemViewEditItemInfo
 	// ...component 'form-buttons-centered-container__cancel-button' element and
-	// ...ItemViewCommentBoxIndividualComment component 
-	// ...'comment__centering-container__pair-container__cancel-button' element 
-	// ...-- background color with hover
+	// ...ItemViewCommentBoxIndividualComment component
+	// ...'individual-comment-divider__form-buttons-centering-container__pair-container__cancel-button'
+	// ...element -- background color with hover
 	.js-get-common-item-view-component-form-cancel-button-element-background-color-with-hover-mode-false {
 		background-color: v.$mode-item-view-form-cancel-button-background-color-light;
 
@@ -186,6 +186,26 @@ body {
 		}
 	}
 
+	// Light/Dark mode -- common (i.e. used by multiple components) ItemViewCommentBoxIndividualCommentDisplayInfo
+	// and ItemViewCommentBoxIndividualCommentEditInfo components 'comment-icon-button'
+	// (className) element -- text color with hover
+	.js-get-common-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false {
+		color: v.$mode-common-item-view-individual-comment-icon-button-text-color-light;
+
+		&:hover,
+		&:active {
+			color: v.$mode-common-item-view-individual-comment-icon-button-hover-text-color-light;
+		}
+	}
+	.js-get-common-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true {
+		color: v.$mode-common-item-view-individual-comment-icon-button-text-color-dark;
+
+		&:hover,
+		&:active {
+			color: v.$mode-common-item-view-individual-comment-icon-button-hover-text-color-dark;
+		}
+	}
+
 	// Light/Dark mode -- Home component 'home-component' element -- background
 	// ...and text colors
 	.js-get-home-component-background-and-text-color-dark-mode-false {
@@ -197,8 +217,8 @@ body {
 		color: v.$mode-home-text-color-dark;
 	}
 
-	// Light/Dark mode -- NavbarHamburger component's 'hamburger-dropdown' 
-	// ...element's -- border, background (with hover and selected), and text 
+	// Light/Dark mode -- NavbarHamburger component's 'hamburger-dropdown'
+	// ...element's -- border, background (with hover and selected), and text
 	// ...color
 	@mixin mode-hamburger-dropdown($is-light) {
 		@if $is-light {
@@ -273,7 +293,7 @@ body {
 		background-color: v.$mode-account-sidebar-background-color-dark;
 	}
 
-	// Light/Dark mode -- AccountSidebar component 'horizontal-dividing-line' 
+	// Light/Dark mode -- AccountSidebar component 'horizontal-dividing-line'
 	// ...element -- border color
 	.js-get-account-sidebar-component-horizontal-dividing-line-element-border-color-dark-mode-false {
 		border-color: v.$mode-account-sidebar-horizontal-dividing-line-border-color-light;
@@ -301,7 +321,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode -- AccountModal component 'account-modal' element -- 
+	// Light/Dark mode -- AccountModal component 'account-modal' element --
 	// ...background color
 	.js-get-account-modal-component-modal-element-background-color-dark-mode-false {
 		background-color: v.$mode-account-modal-background-color-light;
@@ -310,7 +330,7 @@ body {
 		background-color: v.$mode-account-modal-background-color-dark;
 	}
 
-	// Light/Dark mode -- AccountModalDeleteAccount component 
+	// Light/Dark mode -- AccountModalDeleteAccount component
 	// ...'form__label__captial-delete' element -- text color
 	.js-get-account-modal-delete-account-component-capital-delete-element-text-color-dark-mode-false {
 		color: v.$mode-account-modal-delete-account-capital-delete-text-color-light;
@@ -332,7 +352,7 @@ body {
 		}
 	}
 
-	// Light/Dark mode -- AccountModalDeleteAccount component 
+	// Light/Dark mode -- AccountModalDeleteAccount component
 	// ...'form__submit--delete' element -- background (with hover) color
 	.js-get-account-modal-delete-account-component-form-submit-element-background-color-dark-mode-false {
 		background-color: v.$mode-account-modal-delete-account-form-delete-button-background-color-light;
@@ -411,7 +431,7 @@ body {
 		pointer-events: none;
 	}
 
-	// Light/Dark mode -- ListViewTable component 'list-table__row__header' 
+	// Light/Dark mode -- ListViewTable component 'list-table__row__header'
 	// ...element -- box shadow and background color
 	.js-get-list-view-table-component-row-header-element-box-shadow-and-background-color-dark-mode-false {
 		box-shadow: v.$mode-list-view-table-row-header-box-shadow-light;
@@ -690,25 +710,6 @@ body {
 		pointer-events: none;
 	}
 
-	// Light/Dark mode -- ItemViewCommentBoxIndividualComment component 'comment__block__icon-button'
-	// ...element -- text color with hover
-	.js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-false {
-		color: v.$mode-item-view-comment-box-individual-comment-icon-button-text-color-light;
-
-		&:hover,
-		&:active {
-			color: v.$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-light;
-		}
-	}
-	.js-get-item-view-comment-box-individual-comment-component-icon-button-element-text-color-with-hover-mode-true {
-		color: v.$mode-item-view-comment-box-individual-comment-icon-button-text-color-dark;
-
-		&:hover,
-		&:active {
-			color: v.$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark;
-		}
-	}
-
 	//========
 	// Themes
 	//========
@@ -776,7 +777,7 @@ body {
 		background-color: v.$theme-common-standard-border-background-color-purple-rain;
 	}
 
-	// Theme -- Common (i.e. used by multiple components) -- background color 
+	// Theme -- Common (i.e. used by multiple components) -- background color
 	// ...with hover
 	@mixin theme-background-color-with-hover(
 		$theme-common-brighter-background-color,
@@ -820,7 +821,7 @@ body {
 		);
 	}
 
-	// Theme -- Common (i.e. used by multiple components) component form submit 
+	// Theme -- Common (i.e. used by multiple components) component form submit
 	// ...button element -- background color with hover and focus
 	@mixin theme-form-submit-button-background-color-with-hover-focus(
 		$theme-common-brighter-background-color,
@@ -935,7 +936,7 @@ body {
 	}
 
 	// Theme + Light/Dark mode -- Common (i.e. used by multiple components)
-	// ...component form input/textarea/select/option element -- focus border 
+	// ...component form input/textarea/select/option element -- focus border
 	// ...color
 	.js-get-common-form-input-focus-border-color-mode-light-theme-blue-turkish {
 		&:focus {
@@ -988,9 +989,9 @@ body {
 		}
 	}
 
-	// Theme + Light/Dark mode -- common (i.e. used by multiple components) 
+	// Theme + Light/Dark mode -- common (i.e. used by multiple components)
 	// ...ListViewTopBar component 'centering-container__search-container' element
-	// ...and ItemViewTopBar component 'search-container' element -- border, 
+	// ...and ItemViewTopBar component 'search-container' element -- border,
 	// ...background, and text color
 	@mixin theme-mode-common-top-bar-search-container(
 		$theme-border-background-color,
@@ -1106,7 +1107,7 @@ body {
 		border-color: v.$theme-mode-common-purple-rain-new-item-tutorial-border-text-color-dark;
 	}
 
-	// Theme + Light/Dark mode -- ListViewTopBar component 'new-item-tutorial-container' 
+	// Theme + Light/Dark mode -- ListViewTopBar component 'new-item-tutorial-container'
 	// ...element -- border, arrow, and text color
 	@mixin mode-top-bar-tutorial(
 		$theme-mode-common-top-bar-new-item-tutorial-border-text-color-light,
@@ -1425,7 +1426,7 @@ body {
 		);
 	}
 
-	// Theme + Light/Dark mode -- ToggleSwitch component 'toggle-switch-component' 
+	// Theme + Light/Dark mode -- ToggleSwitch component 'toggle-switch-component'
 	// ...element -- border, background, and text color
 	@mixin theme-mode-toggle-switch(
 		$theme-mode-common-toggle-switch-on-border-background-color-light,
@@ -1546,7 +1547,7 @@ body {
 	//===============
 	// Status colors
 	//===============
-	// Status color -- Common (i.e. used by multiple components) -- background 
+	// Status color -- Common (i.e. used by multiple components) -- background
 	// ...color
 	.js-get-common-status-background-color-gray {
 		background-color: v.$status-common-color-gray;
