--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
@@ -1,17 +1,63 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-// This file is for SCSS used only by the ItemViewCommentBox component
-// ...SCSS shared with other components is in itemView.scss
+// This file is for SCSS used only by the ItemViewCommentBox component and its
+// child components. SCSS shared with any other components is in itemView.scss
 .item-view-component {
-	.form-submit-centering-container {
+	.create-comment-form-button-centering-container {
 		position: relative;
 		height: 50px;
 		width: 100%;
 	}
 
-	.form-submit-centering-container__button {
+	.create-comment-form-button-centering-container__submit-button {
 		@include m.dead-center();
 		@include m.item-view-form-submit-button();
+	}
+
+	.individual-comment-divider {
+		margin: 30px 0px 30px 0px;
+		border-bottom: 1px solid silver;
+	}
+
+	.individual-comment-divider__internal-divider {
+		margin: 10px 0px 10px 0px;
+	}
+
+	.comment-icon-button {
+		display: inline;
+		margin-left: 10px;
+		color: v.$mode-common-item-view-individual-comment-icon-button-text-color-light;
+		cursor: pointer;
+
+		&:hover,
+		&:active {
+			color: v.$mode-common-item-view-individual-comment-icon-button-hover-text-color-light;
+		}
+	}
+
+	.individual-comment-divider__form-buttons-centering-container {
+		position: relative;
+		margin-bottom: 20px;
+		height: 40px;
+		width: 100%;
+	}
+
+	.individual-comment-divider__form-buttons-centering-container__pair-container {
+		@include m.horizontal-center();
+		top: 0px;
+		width: 265px;
+	}
+
+	.individual-comment-divider__form-buttons-centering-container__pair-container__submit-edit-button {
+		@include m.item-view-form-submit-button();
+
+		float: left;
+	}
+
+	.individual-comment-divider__form-buttons-centering-container__pair-container__cancel-button {
+		@include m.item-view-form-cancel-button();
+
+		float: right;
 	}
 }
